--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,31 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .button {
+    @apply px-4 py-2 border rounded-full cursor-pointer hover:shadow-lg active:scale-95 active:bg-gray-100 transition transform duration-100 ease-out;
+  }
+
+  .nav-link {
+    @apply h-[2px] w-0 bg-black group-hover:w-full transform transition-all duration-500 ease-out self-center bg-white;
+  }
+}
+
+/* Marker tweaks */
+.mapboxgl-popup-close-button {
+  padding: 0 0.5rem;
+  font-size: 1.5rem;
+}
+
+.mapboxgl-popup-content {
+  width: 10rem;
+}
+
+.mapboxgl-popup-content div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 5px 5px 0 5px;
+}
